fix form width on smaller screens

--- a/src/pages/ContactPage/ContactPage.module.scss
+++ b/src/pages/ContactPage/ContactPage.module.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     @include mixins.flex(center);
+    width: 100%;
 
     @include mixins.mq(desktop) {
       width: 50%;
